--- a/style.css
+++ b/style.css
@@ -572,14 +572,14 @@ section.company {
   height: 100%;
 }
 
-.image {
+.points-image {
   width: 100%;
   height: 80%;
   border-top: 1px solid black;
   border-right: 1px solid black;
 }
 
-.image img {
+.points-image img {
   width: 100%;
   height: 100%;
 }
@@ -612,6 +612,44 @@ section.company {
   flex-direction: column;
   justify-content: space-between;
 }
+
+/* ---------- MARKETING ---------- */
+
+.marketing {
+  width: 100%;
+  height: auto;
+  padding-top: 150px;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  background-color: blue;
+}
+
+.marketing-image {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.marketing-image img {
+  width: 70%;
+}
+
+.marketing-infos {
+  width: 80%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: red;
+}
+
+.sub-info {
+  width: 10%;
+  background-color: purple;
+}
+
 
 /* ---------- CONTENT ---------- */
 
@@ -658,12 +696,9 @@ section.company {
 }
 
 .content-form {
-  width: 60%;
-
   display: flex;
   align-items: center;
   justify-content: flex-start;
-  padding-left: 25px;
 }
 
 .form-control {
@@ -721,7 +756,7 @@ button svg {
 }
 
 .content-extra-infos {
-  width: 55%;
+  width: 75%;
   display: flex;
   flex-direction: column;
   gap: 15px;
