--- a/style.css
+++ b/style.css
@@ -8,14 +8,19 @@
   box-sizing: border-box;
 }
 
+html {
+  overflow: hidden;
+}
+
 body {
   width: 100%;
   height: 100vh;
   font-family: 'Poppins', sans-serif;
   background-color: #121212;
   background-image: to bottom;
-  overflow-x: hidden;
+  overflow: hidden;
 }
+
 
 /* ---------- NAV ---------- */
 
