--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@
 }
 
 html {
-  overflow: hidden;
+  overflow-x: hidden;
 }
 
 body {
@@ -18,7 +18,7 @@ body {
   font-family: 'Poppins', sans-serif;
   background-color: #121212;
   background-image: to bottom;
-  overflow: hidden;
+  overflow-x: hidden;
 }
 
 
