--- a/style.css
+++ b/style.css
@@ -8,7 +8,6 @@
   box-sizing: border-box;
 }
 
-
 body {
   width: 100%;
   height: 100vh;
@@ -16,7 +15,6 @@ body {
   background-color: #121212;
   background-image: to bottom;
   overflow-x: hidden;
-  overflow-y: scroll;
 }
 
 /* ---------- NAV ---------- */
@@ -160,7 +158,6 @@ header {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  overflow-x: hidden;
 }
 
 .slider {
@@ -179,6 +176,7 @@ header {
   padding: 20px;
   margin: 0;
   background-image: linear-gradient(to top right, #121212, transparent);
+  overflow-x: hidden;
 }
 
 .slider-control {
@@ -360,7 +358,6 @@ section.company {
   margin: 0 auto;
   width: 80%;
   display: flex;
-  justify-content: center;
   overflow-x: auto;
   scroll-behavior: smooth;
   background-color: transparent;
@@ -1000,15 +997,36 @@ button svg {
   }
 
   .content-social {
-    height: 83px;
+    height: 65px;
     display: flex;
     align-items: center;
+    border-inline: none;
+    border-block: 3px solid black;
   }
 
   .content-title {
     font-size: 40px;
     margin-top: 20px;
   }
+
+  .content-footer {
+    width: 85%;
+    display: flex;
+    flex-direction: column;
+    border-top: none;
+  }
+
+  .content-name {
+    border-top: 3px solid black;
+  }
+
+  .content-name,
+  .content-social,
+  .content-group {
+  width: 100%;
+  }
+
+
 }
 
 @media (min-width: 768px) {
@@ -1061,7 +1079,7 @@ button svg {
   }
 
   .content-social {
-    height: 83px;
+    height: 55px;
     display: flex;
     align-items: center;
   }
@@ -1087,5 +1105,9 @@ button svg {
     flex-direction: column;
     align-items: center;
     background-color: #ff8b00;
+  }
+
+  .outdoors {
+    height: 70vh;
   }
 }
